<resources>
    <string name="app_name">特惠购</string>
    <string name="common_request_permission">该操作需要开通权限</string>
    <string name="common_allow_permission">允许</string>
    <string name="snack_bar_exception_msg">请基于BaseActivity和BaseFragment来设计</string>
    <string name="fail_to_access_servers">网络繁忙，请重试</string>
    <string name="layoutManager_Gridlayout">GridLayoutManager</string>
    <string name="layoutManager_LinearLayout">LinearLayoutManager</string>
    <string name="space_card_number">卡号&#8195;</string>
    <string name="weixin_pay">微信支付&#12288;</string>
    <string name="payable">需付&#160;&#160;</string>
    <string name="total_price">合计</string>
    <string name="sf_no">顺丰单号&#160; </string>
    <string name="bank_card_page">银行卡页</string>
    <string name="view_fund_page">资金去向页</string>
    <string name="mine_bank_card_click">我的-银行卡</string>
    <string name="bank_card_add_click">银行卡添加</string>
    <string name="successfully_saved">保存成功</string>
    <string name="signing_on">登录中</string>
    <string name="loading">加载中</string>
    <string name="processing">处理中</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="alipay_verify">实人认证</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="input_vcode">输入验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="login">登录</string>
    <string name="other_login">其他方式登录/注册</string>
    <string name="i_read_agree">我已阅读同意</string>
    <string name="and">和</string>
    <string name="registration_agreement">《用户协议》</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="registration_agreement_tv">用户协议</string>
    <string name="privacy_policy_tv">隐私政策</string>
    <string name="cerify_tip">认证时需要先缴纳第三方认证费用，认证成功后我们会赠送您双倍金额的优惠券。</string>
    <string name="cerify_tip_tv"> 1:身份证信息仅供平台提供诚信保证使用。\n 2:我方承诺不向其他第三方透露您的个人信息</string>
    <string name="auth_now">立即认证</string>
    <string name="goods_amount">商品金额</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="to_pay">去支付</string>
    <string name="verified">实人认证</string>
    <string name="upload_id_photo">上传身份证照片</string>
    <string name="upload_id_tip">温馨提示：请保证照片身份证号码清晰可见，遮挡、模糊或传不相关图片的都将导致审核不通过。</string>
    <string name="id_photo_requirements">身份证照片要求：</string>
    <string name="submit_review">提交审核</string>
    <string name="face_to_camera">拍摄您本人人脸，请确保正对相机，光线充足</string>
    <string name="collect_face">采集本人人脸</string>
    <string name="read_and_agreed">点击按钮表示您已阅读并同意</string>
    <string name="face_protocol">《人脸识别认证协议》</string>
    <string name="verify_result_success">认证成功，3秒后自动返回首页</string>
    <string name="verify_result_fail">很遗憾，认证失败</string>
    <string name="recertify">重新认证</string>
    <string name="bind_phone">为了您的账号安全\n请绑定手机</string>
    <string name="bind_now">立即绑定</string>
    <string name="choice_login">请阅读并同意《用户协议》和《隐私政策》</string>
    <string name="login_register">登录/注册</string>
    <string name="login_register_bt">一键登录/注册</string>
    <string name="bind_onclick_mobile">本机号码一键绑定</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="search_address">地址搜索</string>
    <string name="input_shipping_address">请输入您的收货地址</string>
    <string name="add_new_address">新增收货地址</string>
    <string name="update_address">编辑收货地址</string>
    <string name="receiver">收货人</string>
    <string name="input_receiver">请填写收货人的姓名</string>
    <string name="phone_number">手机号</string>
    <string name="ms">女士</string>
    <string name="men">男士</string>
    <string name="receipt_address">收货地址</string>
    <string name="click_select_address">点击选择收货地址</string>
    <string name="detail_address">详细地址</string>
    <string name="house_number_tip">详细地址，例如：3号楼2单元105</string>
    <string name="label">标签</string>
    <string name="house">家</string>
    <string name="company">公司</string>
    <string name="school">学校</string>
    <string name="other">其他</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="save_receipt_information">保存收货信息</string>
    <string name="select_address">选择收货地址</string>
    <string name="my_address">我的收货地址</string>
    <string name="add_address">新增地址</string>
    <string name="edit">编辑</string>
    <string name="no_address_added_yet">暂无收货地址哦！</string>
    <string name="add_receive_address">添加收货地址</string>
    <string name="local_team">本地拼团</string>
    <string name="whole_network_discount">全网优惠</string>
    <string name="selected_group">拼团精选</string>
    <string name="more">更多</string>
    <string name="activity_group">活动团</string>
    <string name="go_spell">去拼团</string>
    <string name="initiate_bill">发起拼单</string>
    <string name="individual_shopping">单独购买</string>
    <string name="buy_number">购买数量</string>
    <string name="submit_order">提交订单</string>
    <string name="total_amount">总金额：</string>
    <string name="no_address_set">您还没有设置收货地址，请先设置收货地址</string>
    <string name="buyer_message">买家留言</string>
    <string name="goods_price">商品金额</string>
    <string name="coupon">优惠券</string>
    <string name="goods_total_amount">总金额</string>
    <string name="select_pay_type">选择支付方式</string>
    <string name="pay_now">立即支付</string>
    <string name="looting">正在疯抢</string>
    <string name="looting_soon">即将开抢</string>
    <string name="remind_me">提醒我</string>
    <string name="cash_back">返利</string>
    <string name="dividend">分红</string>
    <string name="rice_grain">米粒</string>
    <string name="my_order">我的订单</string>
    <string name="view_all_orders">查看全部订单</string>
    <string name="open_now">立即开通</string>
    <string name="my_service">我的服务</string>
    <string name="setting">设置</string>
    <string name="opinions_feedback">意见与反馈</string>
    <string name="version_detection">版本检测</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="login_out">退出登录</string>
    <string name="all_orders">全部订单</string>
    <string name="pending_payment">待支付</string>
    <string name="pending_share">待分享</string>
    <string name="pending_delivery">待发货</string>
    <string name="shipping">待收货</string>
    <string name="completed">已完成</string>
    <string name="to_be_paid">需付：</string>
    <string name="actually_paid_colon">实付：</string>
    <string name="received">已签收</string>
    <string name="closed">已关闭</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="one_more_order">再来一单</string>
    <string name="my_team">我的拼团</string>
    <string name="group_details">拼团详情</string>
    <string name="invite_friends">邀请好友</string>
    <string name="in_group">拼团中</string>
    <string name="successful_team">拼团成功</string>
    <string name="daily_group">日常团</string>
    <string name="order_detail">订单详情</string>
    <string name="delivery_time">配送时间</string>
    <string name="commodity_price">商品总价</string>
    <string name="delivery_fee">运费</string>
    <string name="real_payment">实付款：</string>
    <string name="copy">复制</string>
    <string name="order_number">订单编号：</string>
    <string name="order_time">下单时间：</string>
    <string name="create_time">创建时间：</string>
    <string name="payment_method">支付方式：</string>
    <string name="payment_time">付款时间：</string>
    <string name="order_notes">订单备注：</string>
    <string name="remaining_payment_time">支付剩余时间为：</string>
    <string name="cancel_time_tip">15分钟内未支付，订单将自动取消</string>
    <string name="copy_successfully">复制成功</string>
    <string name="order_submission_successful">订单提交成功</string>
    <string name="order_paid">订单已支付</string>
    <string name="merchant_packaging">商家打包中</string>
    <string name="delivery_shipping">正在配送中</string>
    <string name="order_delivered">订单已送达</string>
    <string name="unused">未使用</string>
    <string name="used">已使用</string>
    <string name="expired">已过期</string>
    <string name="use">使用</string>
    <string name="to_use">去使用</string>
    <string name="expiring">即将到期</string>
    <string name="super_member">超级会员</string>
    <string name="nonactivated">未开通</string>
    <string name="super_member_description">超级会员说明</string>
    <string name="member_buy">会员专享价｜省钱省心</string>
    <string name="select_coupon">选择优惠券</string>
    <string name="no_coupons">不使用优惠券</string>
    <string name="service_wechat">售后客服微信</string>
    <string name="copy_wechat">复制微信</string>
    <string name="add_wechat">任何售后问题请添加客服微信哦！</string>
    <string name="is_selected">已选：</string>
    <string name="out_stock">暂无库存</string>
    <string name="from_end">距结束</string>
    <string name="group_purchase_price">团购价：</string>
    <string name="pinyin_now">立即拼单</string>
    <string name="remaining_spike">距结束还剩</string>
    <string name="open_time">距开抢还剩</string>
    <string name="join_pinyin_now">立即参与拼单</string>
    <string name="surplus">剩余</string>
    <string name="input_detail_address">请填写详细地址</string>
    <string name="fill_remarks">请填写备注</string>
    <string name="complete">完成</string>
    <string name="delete">删除</string>
    <string name="add_success">添加成功</string>
    <string name="delete_success">删除成功</string>
    <string name="no_data">暂无数据</string>
    <string name="not_in_opening_area">不在开通区域</string>
    <string name="no_coupon">暂无优惠券</string>
    <string name="go_shopping">去逛逛</string>
    <string name="identity_information">身份信息</string>
    <string name="face_recognition">人脸识别</string>
    <string name="complete_verify">完成认证</string>
    <string name="input_idcard_name">请填写身份证上的姓名</string>
    <string name="input_idcard_number">请填写身份证号码</string>
    <string name="confirm_id">请如实填写，一旦认证不可更改。</string>
    <string name="verfiy_success">恭喜！您的实人认证已经通过审核</string>
    <string name="verfiy_failed">很遗憾，认证失败</string>
    <string name="next">下一步</string>
    <string name="auth_again">重新认证</string>
    <string name="real_name">真实姓名</string>
    <string name="id_card_number">身份证号</string>
    <string name="verfiy_success_content">1:身份证信息仅供平台提供诚信保证使用。\n2:我方承诺不向其他第三方透露您的个人信息</string>
    <string name="regular_name">请输入正确的名字</string>
    <string name="regular_id_card">请输入正确的身份证号</string>
    <string name="first_back_verify">您是否要返回身份信息验证界面</string>
    <string name="no_order">暂无订单</string>
    <string name="exclusive_members">超级会员专享</string>
    <string name="member_price">会员价</string>
    <string name="my_invitation">我的邀请</string>
    <string name="not_certified">未认证</string>
    <string name="is_verified">已认证</string>
    <string name="message">消息</string>
    <string name="order_message">订单消息</string>
    <string name="mark_all_read">全部标记已读</string>
    <string name="empty">清空</string>
    <string name="day">天</string>
    <string name="hour">时</string>
    <string name="min">分</string>
    <string name="second">秒</string>
    <string name="cardholder">持卡人</string>
    <string name="id_card">身份证</string>
    <string name="safe_code">安全码</string>
    <string name="expire_date">有效期</string>
    <string name="cardholder_name">持卡人姓名</string>
    <string name="cardholder_card_number">持卡人卡号</string>
    <string name="cardholder_id_card">持卡人身份证号</string>
    <string name="bank_phone_number">银行预留手机号</string>
    <string name="fast_payment_agreement">我已阅读并同意《特惠购快捷支付协议》</string>
    <string name="bank_pay">银行卡支付</string>
    <string name="safe_code_tip">信用卡必填</string>
    <string name="expire_date_tip">信用卡必填 格式YY/MM</string>
    <string name="merchant_rights">渠道商权益</string>
    <string name="channel_points">渠道积分</string>
    <string name="channel_points_tip">实际消费可获得相应\n积分，可兑换商品</string>
    <string name="hc_gold_card">红尘金卡</string>
    <string name="hc_gold_card_tip">方便、快捷、安心的\n借款服务</string>
    <string name="accumulated_points">累计积分</string>
    <string name="redeemable_points">可兑换积分</string>
    <string name="points_record">积分记录</string>
    <string name="view_points_details">查看积分明细</string>
    <string name="redeem">积分兑换</string>
    <string name="redeem_tip">多重好物等你兑</string>
    <string name="change_information">更改信息</string>
</resources>