<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround6"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/title_rel"
        style="@style/title_red_rl_style">

        <ImageView
            android:id="@+id/back"
            style="@style/title_left_back_style" />

        <com.mall.sls.common.widget.textview.MediumThickTextView
            android:id="@+id/title"
            style="@style/title_text_style"
            android:text="@string/add_new_address" />
    </RelativeLayout>

    <com.mall.sls.common.widget.scrollview.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/add_address_ll_style">

                <com.mall.sls.common.widget.textview.ConventionalTextView
                    style="@style/add_address_left_tv_style"
                    android:text="@string/receiver" />

                <com.mall.sls.common.widget.textview.ConventionalEditTextView
                    android:id="@+id/name_et"
                    style="@style/address_et_style"
                    android:layout_marginLeft="@dimen/dp_42"
                    android:hint="@string/input_receiver"
                    android:inputType="text" />
            </LinearLayout>

            <View style="@style/fifteen_back_nine_line_style" />

            <LinearLayout style="@style/add_address_ll_style">

                <ImageView
                    android:id="@+id/ms_iv"
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_105"
                    android:src="@drawable/gender_select" />

                <com.mall.sls.common.widget.textview.ConventionalTextView
                    style="@style/size15_color_app3_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_7"
                    android:text="@string/ms" />

                <ImageView
                    android:id="@+id/men_iv"
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_79"
                    android:src="@drawable/gender_select" />

                <com.mall.sls.common.widget.textview.ConventionalTextView
                    style="@style/size15_color_app3_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_7"
                    android:text="@string/men" />
            </LinearLayout>

            <View style="@style/fifteen_back_nine_line_style" />

            <LinearLayout style="@style/add_address_ll_style">

                <com.mall.sls.common.widget.textview.ConventionalTextView
                    style="@style/add_address_left_tv_style"
                    android:text="@string/phone_number" />

                <com.mall.sls.common.widget.textview.ConventionalEditTextView
                    android:id="@+id/phone_number_et"
                    style="@style/address_et_style"
                    android:layout_marginLeft="@dimen/dp_42"
                    android:hint="@string/input_phone_number"
                    android:inputType="number"
                    android:maxLength="11" />
            </LinearLayout>

            <View style="@style/fifteen_back_nine_line_style" />

            <RelativeLayout style="@style/add_address_ll_style">

                <com.mall.sls.common.widget.textview.ConventionalTextView
                    android:id="@+id/address_tv"
                    style="@style/add_address_left_tv_style"
                    android:layout_centerVertical="true"
                    android:text="@string/receipt_address" />

                <com.mall.sls.common.widget.textview.ConventionalTextView
                    android:id="@+id/address"
                    style="@style/add_address_right_tv_style"
                    android:layout_toLeftOf="@id/right_arrow_iv"
                    android:layout_toRightOf="@id/address_tv"
                    android:hint="@string/click_select_address" />

                <ImageView
                    android:id="@+id/right_arrow_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_black_right_arrow"
                    android:layout_marginRight="@dimen/dp_15"/>
            </RelativeLayout>

            <View style="@style/fifteen_back_nine_line_style" />

            <LinearLayout style="@style/add_address_ll_style">

                <com.mall.sls.common.widget.textview.ConventionalTextView
                    style="@style/add_address_left_tv_style"
                    android:text="@string/detail_address" />

                <com.mall.sls.common.widget.textview.ConventionalEditTextView
                    android:id="@+id/house_number_et"
                    style="@style/address_et_style"
                    android:layout_marginLeft="@dimen/dp_28"
                    android:hint="@string/house_number_tip"
                    android:inputType="text" />
            </LinearLayout>

            <View style="@style/fifteen_back_nine_line_style" />

            <LinearLayout style="@style/add_address_ll_style">

                <com.mall.sls.common.widget.textview.ConventionalTextView
                    style="@style/add_address_left_tv_style"
                    android:text="@string/label" />

                <com.mall.sls.common.widget.textview.ConventionalTextView
                    android:id="@+id/house"
                    style="@style/address_label_tv_style"
                    android:text="@string/house"
                    android:layout_marginLeft="@dimen/dp_57"/>
                <com.mall.sls.common.widget.textview.ConventionalTextView
                    android:id="@+id/company"
                    style="@style/address_label_tv_style"
                    android:text="@string/company"
                    android:layout_marginLeft="@dimen/dp_5"/>
                <com.mall.sls.common.widget.textview.ConventionalTextView
                    android:id="@+id/school"
                    style="@style/address_label_tv_style"
                    android:text="@string/school"
                    android:layout_marginLeft="@dimen/dp_5"/>
                <com.mall.sls.common.widget.textview.ConventionalTextView
                    android:id="@+id/other"
                    style="@style/address_label_tv_style"
                    android:text="@string/other"
                    android:layout_marginLeft="@dimen/dp_5"/>
            </LinearLayout>
            <View style="@style/fifteen_back_nine_line_style" />
        <RelativeLayout style="@style/add_address_ll_style">
            <com.mall.sls.common.widget.textview.ConventionalTextView
                style="@style/add_address_left_tv_style"
                android:text="@string/set_default_address"
                android:layout_centerVertical="true"/>
            <ImageView
                android:id="@+id/default_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_address_select"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_15"/>
        </RelativeLayout>
            <com.mall.sls.common.widget.textview.MediumThickTextView
                android:id="@+id/confirm_bt"
                style="@style/common_next_bt_style"
                android:layout_marginTop="@dimen/dp_104"
                android:text="@string/save_receipt_information" />
        </LinearLayout>
    </com.mall.sls.common.widget.scrollview.ReboundScrollView>
</LinearLayout>