<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <com.mall.sls.common.widget.textview.ConventionalTextView
        android:id="@+id/day_time"
        style="@style/size14_color_back1_text_style"
        tools:text="12" />

    <com.mall.sls.common.widget.textview.ConventionalTextView
        android:id="@+id/day_tv"
        style="@style/size14_color_back1_text_style"
        android:text="@string/day" />

    <com.mall.sls.common.widget.textview.ConventionalTextView
        android:id="@+id/hour_time"
        style="@style/size14_color_back1_text_style"
        tools:text="12" />

    <com.mall.sls.common.widget.textview.ConventionalTextView
        android:id="@+id/hour_tv"
        style="@style/size14_color_back1_text_style"
        android:text="@string/hour" />

    <com.mall.sls.common.widget.textview.ConventionalTextView
        android:id="@+id/min_time"
        style="@style/size14_color_back1_text_style"
        tools:text="12" />

    <com.mall.sls.common.widget.textview.ConventionalTextView
        style="@style/size14_color_back1_text_style"
        android:text="@string/min" />

    <com.mall.sls.common.widget.textview.ConventionalTextView
        android:id="@+id/second_time"
        style="@style/size14_color_back1_text_style"
        tools:text="12" />

    <com.mall.sls.common.widget.textview.ConventionalTextView
        style="@style/size14_color_back1_text_style"
        android:text="@string/second" />
</LinearLayout>